--- a/templates/news.html
+++ b/templates/news.html
@@ -19,8 +19,8 @@
     </div>
     <div id="p2" class="col-md-6 text-end">
       <p>
-        &#9742; +254 700 000 000 | +254 790 100 000
-        <strong><span class="iconlarge">&#9993;</span> info@johgaro.co.ke</strong>
+        &#9742; +254 743 508 923 | +254 743 508 923
+        <strong><span class="iconlarge">&#9993;</span> jacksonwanjoroge@gmail.com </strong>
         <a class="nav-link " href="{% url 'index' %}">Home</a>
 
       </p>
