--- a/main/templates/contact.html
+++ b/main/templates/contact.html
@@ -10,6 +10,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <link rel="stylesheet" href="{% static 'main/css/style.css' %}" />
     <script src="{% static 'main/js/scripts.js' %}"></script>
   </head>
@@ -78,6 +80,12 @@ Thank you for your patience 🙏. In the meantime, you can reach us directly via
         <p>P.O. Box 596, Nairobi, Kenya</p>
         <p>Email: info@johgaro.co.ke</p>
         <p>Phone: +254 743 508 923</p>
+        <p>
+  Contact me on WhatsApp: 
+  <a href="https://wa.me/254743508923" target="_blank">
+  <i class="fab fa-whatsapp fa-2x" style="color: green;"></i>
+</a>
+</p>
       </div>
 
     </div>
